--- a/portfolio.css
+++ b/portfolio.css
@@ -461,6 +461,12 @@ footer {
     }
 }
 
+video {
+    /* override other styles to make responsive */
+    width: 100%    !important;
+    height: auto   !important;
+}
+
 /* Texts over the video */
 .Video_Text {
     background: rgba(0, 0, 0, 0.5); /* This provides a semi-transparent background for the text to sit over */
